doc: remove current date in long version

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -46,6 +46,7 @@
 \title{Optimizing Program Size Using Multi-result Supercompilation}
 \else
 \title{Controlling Size Of Supercompiled Programs Using Multi-result Supercompilation}
+\date{\vspace{-4ex}}
 \fi
 
 \ifVptVer
