doc: in short version, add reference to extended version in arXiv (replacing dummy reference to GitHub repository)

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -155,7 +155,19 @@ doi={10.1007/978-3-642-29709-0_19}
 	publisher={University of Pereslavl Publishing House}
 }
 
-@techreport{krustev2020MrscOptSizeReport,
+@misc{krustev2020controlling,
+    title={Controlling the Size of Supercompiled Programs using Multi-result Supercompilation},
+    author={Dimitur Krustev},
+    year={2020},
+    institution={IGE+XAO Balkan},
+    address={Sofia, Bulgaria},
+    eprint={2006.02204},
+    archivePrefix={arXiv},
+    primaryClass={cs.PL},
+    url={https://arxiv.org/abs/2006.02204}
+}
+
+@techreport{xxxxkrustev2020MrscOptSizeReport,
 	title={Optimizing Program Size Using Multi-result Supercompilation (Extended Report)},
 	author={Krustev, Dimitur Nikolaev},
   year={2020},
