--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -93,7 +93,7 @@ simultaneously.
 The flip side of this power is that the behavior of supercompilation -- 
 with respect to both transformation time and result size --
 can be very unpredictable.
-This fact makes supercompilation problematic for including as an
+This makes supercompilation problematic for including as an
 optimization step of a standard compiler, for example.
 Measures have been proposed to make supercompilation more
 well-behaved, both in execution time and result size \cite{bolingbroke2011improving,Jonsson2011Taming},
@@ -159,7 +159,7 @@ make a choice whether to generalize the ``lower'' or the ``upper'' configuration
 One of the key insights behind multi-result supercompilation is that the place
 where the whistle has blown is not always the best place to make a generalization.
 The proposed solution is radical: do not generalize when the whistle has blown;
-instead, at any driving step check if suitable generalizations exists and
+instead, at any driving step check if suitable generalizations exist and
 continue driving not only the non-generalized configuration, but also
 all generalized ones,
 giving rise to multiple alternative results of driving.
@@ -176,7 +176,7 @@ of Klyuchnikov et al. \cite{KlyuchnikovMRSCBranch,Klyuchnikov:META2012:MRSC}:
   \item The whole set of transformed programs is represented compactly
     in a tree-like data structure, which further permits not only
     recovering the full set of configuration graphs, but also
-    performing efficiently some kinds of queries on this set.
+    performing efficiently certain kinds of queries on this set.
 \end{itemize}
 The compact representation of the set of graphs is shown in Fig. \ref{fig:GraphSet}.
 We use direct excerpts of the F\# code of the implementation\footnote{Available at
@@ -789,7 +789,7 @@ g(Cons(A, Cons(A, Cons(A, Nil))), z)
 
 Here we analyze in detail several of the example programs (Fig. \ref{fig:Examples}) showing the most interesting results.
 \ifVptVer
-The extended version of this article \cite{krustev2020controlling} discusses a few additional examples as well.
+The extended version of this article \cite{krustev2020controlling} discusses a few additional examples.
 \else
 A few additional examples are shown in Appendix \ref{app:MoreExapmles}.
 \fi
@@ -805,8 +805,8 @@ A few additional examples are shown in Appendix \ref{app:MoreExapmles}.
     to show that Boolean equality is symmetric.
   \item ``exp growth'' (Fig. \ref{sfig:ExpGrowthPrg}-\subref{sfig:ExpGrowth}) is an example taken 
     from S{\o}rensen's thesis \cite[Example 11.4.1]{Sorensen1994TurchinSupercompiler}, who attributes it to Sestoft.
-    It is aimed to demonstrate how classical supercompilation can produce output programs
-    growing exponentially with respect to the input.
+    It is aimed to demonstrate how classical supercompilation can produce output programs,
+    which grow exponentially with respect to the input.
 \end{itemize}
 
 The results of the multi-result supercompilation -- using our specific generalization approach --
@@ -826,7 +826,7 @@ We give the configuration graph sizes for each of the four types of results (fir
   \end{tabular}
 \end{table}
 
-Several interesting observations stem from analyzing the selected resulting programs themselves:
+Several interesting observations arise from analyzing the selected resulting programs themselves:
 \begin{itemize}
   \item In 2 cases (``\verb|eqBool| symmetry'' and ``exp growth'') the minimum program coincides with the first (most generalizing) one;
     in 1 case (``double append'') -- with the last (least generalizing) result. 
@@ -850,14 +850,14 @@ Several interesting observations stem from analyzing the selected resulting prog
     \verb|B(B(B(z, z), B(z, z)), B(B(z, z),| \verb|B(z, z)))| -- clearly suffering from code-size explosion.
     The minimum-size (and also first) program -- shown in Fig. \ref{fig:ExpGrowthMinResult} --
     avoids the pitfall of code-size explosion, thanks to generalization.
-    It, however, has also missed some opportunities for static evaluation.
+    It has, however, also missed some opportunities for static evaluation.
     Interestingly, if we analyze the full set of results, there is another
-    graph of size 17, that produces a program, which has eliminated all possible static reductions,
+    graph of size 17 that produces a program, which has eliminated all possible static reductions,
     while avoiding the risk of code explosion -- Fig. \ref{fig:ExpGrowthOptResult}.
-    Apparently, we need a more refined approach for looking for (close to) minimum-size programs, 
-    if we do not want to miss such results.
-    One explanation of this discrepancy is that -- as already explained -- we compare configuration graph sizes, and not
-    the sizes of the programs produced by residualizing these graphs.
+    Apparently, if we do not want to miss such results, we need a more refined approach for 
+    looking for (close to) minimum-size programs.
+    One explanation of this discrepancy is that -- as already explained -- rather than comparing the sizes of 
+    the programs produced by residualizing these graphs, we compare configuration graph sizes.
 %    As residualization performs some optimizations (removing trivial lets, removing duplicated
 %    function definitions, etc.), the relation between graph size and resulting program size
 %    is not always a monotone function.
@@ -866,7 +866,7 @@ Several interesting observations stem from analyzing the selected resulting prog
 %    without actually enumerating all of them, which can be impractical in general.
     A possible compromise is to study better size measures for configuration graphs, instead
     of the simple node count we currently use.
-    For example, ignoring unfolding nodes when calculating size can give a better idea for the expected size
+    For example, ignoring unfolding nodes when calculating size can give a better idea of the expected size
     of the residualized program, as unfolding nodes are skipped during residualization.
     Another possibility is to find not only (one of) the minimum-size result(s), but the $N$ smallest
     results ($N$ being an input parameter).
