doc: fix duplicated/missing DOIs

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -29,7 +29,7 @@ year = {2007},
 isbn = {9781595936202},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
-url = {https://doi.org/10.1145/1244381.1244391},
+COMMENT_url = {https://doi.org/10.1145/1244381.1244391},
 doi = {10.1145/1244381.1244391},
 booktitle = {Proceedings of the 2007 ACM SIGPLAN Symposium on Partial Evaluation and Semantics-Based Program Manipulation},
 pages = {61–70},
@@ -74,7 +74,7 @@ year = {2011},
 isbn = {9781450304856},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
-url = {https://doi.org/10.1145/1929501.1929507},
+COMMENT_url = {https://doi.org/10.1145/1929501.1929507},
 doi = {10.1145/1929501.1929507},
 booktitle = {Proceedings of the 20th ACM SIGPLAN Workshop on Partial Evaluation and Program Manipulation},
 pages = {33–42},
@@ -103,7 +103,7 @@ series = {PEPM ’11}
 	pages="193--205",
 	isbn="978-3-642-11486-1",
 	doi={10.1007/978-3-642-11486-1_17},
-	url={http://dx.doi.org/10.1007/978-3-642-11486-1_17}
+	COMMENT_url={http://dx.doi.org/10.1007/978-3-642-11486-1_17}
 }
 	
 @InProceedings{KlyuchnikovMRSCBranch,
@@ -180,7 +180,7 @@ doi={10.1007/978-3-642-29709-0_19}
    title={Verification of Programs via Intermediate Interpretation},
    volume={253},
    ISSN={2075-2180},
-   url={http://dx.doi.org/10.4204/EPTCS.253.6},
+   COMMENT_url={http://dx.doi.org/10.4204/EPTCS.253.6},
    DOI={10.4204/eptcs.253.6},
    journal={Electronic Proceedings in Theoretical Computer Science},
    publisher={Open Publishing Association},
@@ -222,6 +222,7 @@ year = 2011
                More precisely, the paper presents positive supercompilation.},
   SEMNO        = {D-364},
   PUF          = {Artikel i proceedings (uden censur)},
+  doi = {10.1007/3-540-47018-2_10},
   _ID           = {Kon}
  }
  
@@ -235,7 +236,7 @@ address = {New York, NY, USA},
 volume = {8},
 number = {3},
 issn = {0164-0925},
-url = {https://doi.org/10.1145/5956.5957},
+COMMENT_url = {https://doi.org/10.1145/5956.5957},
 doi = {10.1145/5956.5957},
 journal = {ACM Trans. Program. Lang. Syst.},
 month = jun,
