doc: fix the overfull box in the bibliography (by indirectly passing option `hyphens` to package `url` - indirectly loaded by the document class itself)

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -1,4 +1,4 @@
-\documentclass[submission,copyright,creativecommons]{eptcs}
+\documentclass[submission,copyright,creativecommons,hyphens]{eptcs}
 \providecommand{\event}{VPT 2020} % Name of the event you are submitting to
 
 %\PassOptionsToPackage{hyphens}{url}
