doc: remove non-ascii characters in .bib file

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -32,11 +32,11 @@ address = {New York, NY, USA},
 COMMENT_url = {https://doi.org/10.1145/1244381.1244391},
 doi = {10.1145/1244381.1244391},
 booktitle = {Proceedings of the 2007 ACM SIGPLAN Symposium on Partial Evaluation and Semantics-Based Program Manipulation},
-pages = {61–70},
+pages = {61--70},
 numpages = {10},
 keywords = {superlinear improvement, termination, generalisation, tail-recursion, program transformation},
 location = {Nice, France},
-series = {PEPM ’07}
+series = {PEPM '07}
 }
   
 @article{Hamilton07,
@@ -77,11 +77,11 @@ address = {New York, NY, USA},
 COMMENT_url = {https://doi.org/10.1145/1929501.1929507},
 doi = {10.1145/1929501.1929507},
 booktitle = {Proceedings of the 20th ACM SIGPLAN Workshop on Partial Evaluation and Program Manipulation},
-pages = {33–42},
+pages = {33--42},
 numpages = {10},
 keywords = {haskell, supercompilation, deforestation},
 location = {Austin, Texas, USA},
-series = {PEPM ’11}
+series = {PEPM '11}
 }
 
 @article{TMR/SCP2014,
@@ -187,7 +187,7 @@ doi={10.1007/978-3-642-29709-0_19}
    author={Lisitsa, Alexei P. and Nemytykh, Andrei P.},
    year={2017},
    month={Aug},
-   pages={54–74}
+   pages={54--74}
 }
 
 @TECHREPORT{MendelGleasonPhD2011,
@@ -240,6 +240,6 @@ COMMENT_url = {https://doi.org/10.1145/5956.5957},
 doi = {10.1145/5956.5957},
 journal = {ACM Trans. Program. Lang. Syst.},
 month = jun,
-pages = {292–325},
+pages = {292--325},
 numpages = {34}
 }
